welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:3: error: type mismatch;
 found   : Unit
 required: Boolean
if( a/10 == b/10 || a/10 == b%10 || b/10 == a/10 || b/10 == a%10 )
^